--- a/public/sass/config/_config.scss
+++ b/public/sass/config/_config.scss
@@ -1,9 +1,16 @@
 @use "sass:map";
 
 $colors: (
-  /* */
+    /* General Colors*/
+    "white": #ffffff,
+    "black": #000000,
+    "teal": #3FC2A0,
+    "lbrown": #D99F6C,
+    "mbrown": #A6633C,
+    "dbrown": #40261D, 
 );
 
+// Function to get color from map
 @function get-color($color: false) {
   @if $color {
     @return map.get($colors, $color);
