--- a/public/sass/global.scss
+++ b/public/sass/global.scss
@@ -1,4 +1,30 @@
+@use "config/config";
+
 body {
-    background-color: black;
-    /* This is for the commit */
+    height: 95vh;
+    width: 100vh;
+    background-color: config.get-color("white"); 
+}
+
+// Scroll Bar Styling
+::-webkit-scrollbar {
+    width: 0.6rem;
+}
+
+::-webkit-scrollbar-thumb {
+background-color: config.get-color('teal');
+border-radius: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+background-color: transparent;
+}
+
+::-webkit-scrollbar-button {
+display: none;
+scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar-corner {
+background-color: config.get-color('white');
 }
