--- a/public/sass/global.scss
+++ b/public/sass/global.scss
@@ -1,9 +1,9 @@
 @use "config/config";
 
 body {
-    height: 95vh;
-    width: 100vh;
-    background-color: config.get-color("white"); 
+    // height: 95vh;
+    // width: 100vh;
+    background-color: config.get-color("white");
 }
 
 // Scroll Bar Styling
@@ -12,19 +12,19 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-background-color: config.get-color('teal');
-border-radius: 0.5rem;
+    background-color: config.get-color('teal');
+    border-radius: 0.5rem;
 }
 
 ::-webkit-scrollbar-track {
-background-color: transparent;
+    background-color: transparent;
 }
 
 ::-webkit-scrollbar-button {
-display: none;
-scroll-behavior: smooth;
+    display: none;
+    scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar-corner {
-background-color: config.get-color('white');
+    background-color: config.get-color('white');
 }
