Home is bijna af :) en andere dingen aangepast en toegevoegd
- De header is helemaal afgekregen ik heb alleen de z-index aangepast zo dar die werkt met de brightness van de Image.
-In indedx.php heb ik alles in elkaar gezet.
-In images heb ik de burger menu en de logo van de website toegevoegd.
-Ik heb in het mapje image een andere map gemaakt genaamd logo en ik heb de logo er in gezet.
-In de font heb ik de url aangepast maar de font doet het nog steeds niet.
-In de config heb ik de colors er bij gezet die stonden bij mij niet.
-In de GLobal.scss heb ik de height en de width uitgezet ander werd mijn code bij de header over geschreven.
-Jessen dit noem je een goede commit ;)

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,6 +1,5 @@
 body {
-  height: 95vh;
-  width: 100vh;
+  background-color: #ffffff;
 }
 
 ::-webkit-scrollbar {
@@ -8,6 +7,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
+  background-color: #3FC2A0;
   border-radius: 0.5rem;
 }
 
@@ -18,6 +18,10 @@ body {
 ::-webkit-scrollbar-button {
   display: none;
   scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: #ffffff;
 }
 
 /*# sourceMappingURL=global.css.map */
