--- a/public/sass/paginas/geschiedenis.scss
+++ b/public/sass/paginas/geschiedenis.scss
@@ -39,7 +39,7 @@ body {
         width: 80%;   
         height: 150%;
         font-family: 'Poppins', sans-serif;
-        font-size: 18px;
+        font-size: 50px;
         line-height: 1.6;
       }
 
@@ -185,30 +185,35 @@ body {
     .image-container {
       display: flex;
       align-items: center;
+      
     }
     
     img.demo {
-      max-width: 35%;
-    
+      max-width: 45%;
       /* Adjust the width of the image as needed */
       height: auto;
     }
     
     .text1 {
       padding: 20px;
+      
+    
+     
     
       p {
         font-size: 20px;
         line-height: 1.6;
         margin: 0;
         font-family: 'Poppins', sans-serif;
+        margin-bottom: 15px;
       }
     }
 
     /* Add this CSS to set a fixed width and height for the images */
     .slide-image {
       width: 100%; /* Set the width to 100% to make the images responsive */
-      height: 700px; /* Set the desired height for all images */
+      height: 700px;
+      margin-top: 300px; /* Set the desired height for all images */
     }
 
 
@@ -239,120 +244,240 @@ body {
       font-family: 'Poppins', sans-serif;
     }
 
-    /* Style for smaller screens (e.g., mobile phones) */
-    @media only screen and (max-width: 888px) {
+        /* Style for smaller screens (e.g., mobile phones) */
+        /* Style for smaller screens (e.g., mobile phones) */
+    @media only screen and (max-width: 992px) {
       .banner img {
-        width: 100%;
-        height: auto;
+          width: 100%;
+          height: auto;
       }
 
       .wrapper, .wrapper1 {
-        padding: 40px;
-        text-align: left;
+          padding: 40px;
+          text-align: left;
       }
 
       .container {
-        text-align: center; /* Center-align the content */
+          text-align: center;
       }
-    
+
       .container h1 {
-        font-size: 36px; /* Adjust the font size as needed for larger screens */
-        margin-top: -40px; /* Add some top margin to separate it from other content */
+          font-size: 36px;
+          margin-top: -40px; /* Adjusted margin */
       }
 
       .container1 {
-        max-width: 800px;
-        margin: 0 auto;
+          max-width: 800px;
+          margin: 0 auto;
       }
 
       .container1 p {
-        font-size: 14px;
-        background-color: bisque;
+          font-size: 20px;
+          background-color: bisque;
       }
 
       .slideshow-container {
-        max-width: 800px;
-        margin: 0 auto;
-        margin-top: -250px; /* Adjust this value as needed */
-        overflow: hidden;
-        position: relative;
-        height: 100%;
+          max-width: 800px;
+          margin: 0 auto;
+          overflow: hidden;
+          position: relative;
+          height: 1300px; /* Changed to auto for responsive height */
       }
 
       .image-container {
-        flex-direction: column;
+          flex-direction: column;
       }
 
       .image-container img {
-        max-width: 100%;
-        margin-bottom: -450px;
+          max-width: 100%;
+          margin-bottom: 20px; /* Adjusted margin */
       }
 
       .text1 {
-        text-align: center;
-        
-        p {
-          margin-bottom: -900px;
-        }
+          text-align: center;
       }
 
+      .text1 p {
+          margin-bottom: 20px; /* Adjusted margin */
+      }
+    }
+
+
+      @media screen and (max-width: 768px) {
+        .banner img {
+          width: 100%;
+          height: auto;
+        }
+  
+        .wrapper, .wrapper1 {
+          padding: 40px;
+          text-align: left;
+        }
+  
+        .container {
+          text-align: center; /* Center-align the content */
+        }
+      
+        .container h1 {
+          font-size: 36px; /* Adjust the font size as needed for larger screens */
+          margin-top: -40px; /* Add some top margin to separate it from other content */
+        }
+  
+        .container1 {
+          max-width: 800px;
+          margin: 0 auto;
+        }
+  
+        .container1 p {
+          font-size: 14px;
+          background-color: bisque;
+        }
+  
+        .slideshow-container {
+          max-width: 800px;
+          margin: 0 auto;
+          margin-top: -250px; /* Adjust this value as needed */
+          overflow: hidden;
+          position: relative;
+          height: 100%;
+        }
+  
+        .image-container {
+          flex-direction: column;
+        }
+  
+        .image-container img {
+          max-width: 100%;
+          margin-top: -300px;
+        }
+  
+        .text1 {
+          text-align: center;
+          
+          p {
+            margin-bottom: -900px;
+          }
+        }
+        
+      }
+
+      @media screen and (max-width: 562px) {
+        .banner img {
+          width: 100%;
+          height: auto;
+        }
+  
+        .wrapper, .wrapper1 {
+          padding: 40px;
+          text-align: left;
+        }
+  
+        .container {
+          text-align: center; /* Center-align the content */
+        }
+      
+        .container h1 {
+          font-size: 36px; /* Adjust the font size as needed for larger screens */
+          margin-top: -40px; /* Add some top margin to separate it from other content */
+        }
+  
+        .container1 {
+          max-width: 800px;
+          margin: 0 auto;
+        }
+  
+        .container1 p {
+          font-size: 20px;
+          background-color: bisque;
+          position: relative;
+          z-index: 1;
+          line-height: 0.8;
+        }
+  
+        .slideshow-container {
+          max-width: 800px;
+          margin: 0 auto;
+          margin-top: -250px; /* Adjust this value as needed */
+          overflow: hidden;
+          position: relative;
+          height: 100%;
+        }
+  
+        .image-container {
+          flex-direction: column;
+        }
+  
+        .image-container img {
+          max-width: 100%;
+          margin-bottom: -450px;
+        }
+  
+        .text1 {
+          text-align: center;
+          
+          p {
+            margin-bottom: -900px;
+          }
+        }
+        
+      }
     }
 
     /* Style for larger screens (e.g., tablets and desktops) */
-    @media only screen and (min-width: 889px) {
-      .banner img {
-        width: 100%;
-        height: auto;
-      }
+    // @media only screen and (min-width: 889px) {
+    //   .banner img {
+    //     width: 100%;
+    //     height: auto;
+    //   }
 
-      .wrapper, .wrapper1 {
-        padding: 40px;
-        text-align: left;
-        position: relative;
-        z-index: 2;
-      }
+    //   .wrapper, .wrapper1 {
+    //     padding: 40px;
+    //     text-align: left;
+    //     position: relative;
+    //     z-index: 2;
+    //   }
 
-      .container {
-        text-align: center; /* Center-align the content */
-      }
+    //   .container {
+    //     text-align: center; /* Center-align the content */
+    //   }
     
-      .container h1 {
-        font-size: 36px; /* Adjust the font size as needed for larger screens */
-        margin-top: -50px; /* Add some top margin to separate it from other content */
-      }
+    //   .container h1 {
+    //     font-size: 36px; /* Adjust the font size as needed for larger screens */
+    //     margin-top: -50px; /* Add some top margin to separate it from other content */
+    //   }
 
-      .container1 {
-        max-width: 800px;
-        margin: 0 auto;
-      }
+    //   .container1 {
+    //     max-width: 800px;
+    //     margin: 0 auto;
+    //   }
 
-      .container1 p {
-        font-size: 18px;
-        background-color: bisque;
-      }
+    //   .container1 p {
+    //     font-size: 18px;
+    //     background-color: bisque;
+    //   }
 
-      .slideshow-container {
-        max-width: 800px;
-        margin: 0 auto;
-        margin-top: 10px; /* Adjust this value as needed */
-        overflow: hidden;
-        position: relative;
-        height: 100%;
-      }
+    //   .slideshow-container {
+    //     max-width: 800px;
+    //     margin: 0 auto;
+    //     margin-top: 10px; /* Adjust this value as needed */
+    //     overflow: hidden;
+    //     position: relative;
+    //     height: 100%;
+    //   }
 
-      .image-container {
-        display: flex;
-      }
+    //   .image-container {
+    //     display: flex;
+    //   }
 
-      .image-container img {
-        max-width: 50%;
-        margin-right: 20px;
-      }
+    //   .image-container img {
+    //     max-width: 50%;
+    //     margin-right: 20px;
+    //   }
 
-      .text1 {
-        text-align: left;
-        margin-bottom: -300px;
-      }
-    }
+    //   .text1 {
+    //     text-align: left;
+    //     margin-bottom: -1500px;
+    //   }
+    // }
     
-  }
+  
