Alles is bijn klaar
-Ik heb de font aangepast was in de verkeerd pad en hij deed niet
-de js stond nog niet ik heb de functie van de burger toegevoegd
-In de header heb ik alleen de letterspacing toegevoegd bij de log in button
-Ik heb een beetje geprobeerd om de banner responsive te maken

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700");
 @font-face {
-  src: url(../config/fonts/Good\ Brush.ttf);
+  src: url(/public/css/fonts/Good\ Brush.ttf);
   font-family: "Good Brush";
 }
 *,
@@ -73,6 +73,7 @@ body {
   border: none;
 }
 .main-head nav .btn a {
+  letter-spacing: 2px;
   text-decoration: none;
   color: white;
 }
