--- a/public/sass/header.scss
+++ b/public/sass/header.scss
@@ -189,7 +189,9 @@ body {
             border-radius: 50px;
             border: none;
 
+
             a {
+                letter-spacing: 2px;
                 text-decoration: none;
                 color: white;
             }
