--- a/public/css/paginas/index.css
+++ b/public/css/paginas/index.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700");
 @font-face {
-  src: url(../config/fonts/Good\ Brush.ttf);
+  src: url(/public/css/fonts/Good\ Brush.ttf);
   font-family: "Good Brush";
 }
 .banner {
@@ -15,6 +15,7 @@
 }
 .banner h1 {
   z-index: 1;
+  font-size: 18px;
   position: absolute;
   display: flex;
   justify-content: center;
@@ -52,6 +53,16 @@
   font-size: 24px;
   padding: 0.6rem 2rem 0.6rem 2rem;
   background-color: #D99F6C;
+}
+
+@media screen and (max-width: 1300px) and (min-width: 320px) {
+  .banner h1 {
+    font-size: 50px;
+  }
+  .banner .buttons {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
