--- a/public/sass/paginas/index.scss
+++ b/public/sass/paginas/index.scss
@@ -16,6 +16,7 @@
 
     h1 {
         z-index: 1;
+        font-size: 18px;
         position: absolute;
         display: flex;
         justify-content: center;
@@ -60,4 +61,17 @@
         }
     }
 
+}
+
+@media screen and (max-width:1300px)and (min-width:320px) {
+    .banner {
+        h1 {
+            font-size: 50px;
+        }
+
+        .buttons {
+            display: flex;
+            flex-direction: column;
+        }
+    }
 }
