--- a/public/css/header.css
+++ b/public/css/header.css
@@ -29,7 +29,8 @@ body {
   background-color: #000000;
   width: 90%;
   top: 2rem;
-  position: fixed;
+  position: absolute;
+  top: 8%;
   font-family: "Roboto Slab";
 }
 .main-head nav .nav-title {
@@ -66,7 +67,7 @@ body {
 .main-head nav .btn {
   color: white;
   text-decoration: none;
-  padding: 0.5rem 3rem;
+  padding: 1rem 3rem;
   background-color: #3FC2A0;
   border-radius: 50px;
   border: none;
