Amine pushed global.css

--- a/public/sass/global.scss
+++ b/public/sass/global.scss
@@ -1,8 +1,8 @@
 @use "config/config";
 
 body {
-    height: 95vh;
-    width: 100vh;
+   // height: 95vh;
+    //width: 100vh;
     background-color: config.get-color("white"); 
 }
 
