--- a/public/css/paginas/vergeten.css
+++ b/public/css/paginas/vergeten.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-image: url("../../Images/backgrounds/bg-vergeten.jpg");
+  background-image: url("../../Images஬kgrounds\bg-vergeten.jpg");
   backdrop-filter: blur(5px);
   background-repeat: no-repeat;
   background-position: center center;
