--- a/public/sass/global.scss
+++ b/public/sass/global.scss
@@ -1,8 +1,8 @@
 @use "config/config";
 
 body {
-    height: 95vh;
-    width: 100vh;
+    margin-left: 0rem;
+    margin-right: 0rem;
     background-color: config.get-color("white"); 
 }
 
