--- a/public/scss/_font.scss
+++ b/public/scss/_font.scss
@@ -3,6 +3,6 @@
 
 // Import Good Brush font
 @font-face {
-    src: url(../fonts/Good\ Brush.ttf);
+    src: url(../../fonts/Good\ Brush.ttf);
     font-family: "Good Brush";
 }
