--- a/public/scss/header.scss
+++ b/public/scss/header.scss
@@ -1,6 +1,6 @@
 @use "./config/config";
 // @use "./config/screen";
-@use "./config/_font.scss";
+// @use "./config/_font.scss";
 
 
 *,
@@ -124,7 +124,6 @@ body {
         padding: 0.5rem 2rem;
         background-color: config.get-color("black");
         width: 90%;
-        top: 2rem;
         position: absolute;
         top: 8%;
         // width: 100%;
