Amine comitted scss and css files

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700");
 @font-face {
-  src: url(../fonts/Good\ Brush.ttf);
+  src: url(/public/css/fonts/Good\ Brush.ttf);
   font-family: "Good Brush";
 }
 *,
@@ -21,6 +21,7 @@ body {
   justify-content: center;
 }
 .main-head nav {
+  z-index: 6;
   border-radius: 50px;
   display: flex;
   align-items: center;
@@ -73,6 +74,7 @@ body {
   border: none;
 }
 .main-head nav .btn a {
+  letter-spacing: 2px;
   text-decoration: none;
   color: white;
 }
