--- a/public/sass/paginas/register.scss
+++ b/public/sass/paginas/register.scss
@@ -2,19 +2,20 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-image: url('../../Images/backgrounds/bg-login.png');
-    backdrop-filter: blur(5px);
+    background-image: url('../../Images/backgrounds/bg-register.jpg');
+    backdrop-filter: blur(1.5px);
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .ga-terug-container {
+    
     text-align: center;
     color: #fff;
     font-size: 18px; 
@@ -27,6 +28,7 @@ body {
 .ga-terug-container a {
     text-decoration: none; 
     color: #FFFFFF;; 
+    text-shadow: #000000;
     font-weight: lighter; 
     font-size: 15px; 
 }
@@ -57,7 +59,6 @@ body {
 }
 
 .login-container button  {
-    width: 90%;
     background-color: #3FC2A0;
     color: #000000;
     padding: 10px 20px;
