--- a/public/sass/paginas/vergeten.scss
+++ b/public/sass/paginas/vergeten.scss
@@ -2,13 +2,13 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-image: url('../../Images/backgrounds/bg-login.png');
+    background-image: url('../../Images\backgrounds\bg-vergeten.jpg');
     backdrop-filter: blur(5px);
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,7 +20,7 @@ body {
     font-size: 18px; 
     margin-bottom: 20px;
     position: absolute;
-    top: 25%;
+    top: 28%;
     left: -11%;
     width: 100%;
 }
@@ -57,7 +57,6 @@ body {
 }
 
 .login-container button  {
-    width: 90%;
     background-color: #3FC2A0;
     color: #000000;
     padding: 10px 20px;
